added a new paragraph

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Site-plan</a>
     </nav>
+    <p>Your Name Here - WDD130</p>
 </body>
 
 </html>
