right path for the images was corrected

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -9,7 +9,7 @@
     <main>
         <!--- Your code goes here --->
         <h1>About Me</h1>
-        <img alt="image of me?" src="bike-designify (2).png" width="700" height="800" />
+        <img alt="image of me?" src="image/bike-designify (2).png" width="700" height="800" />
         <h2>Saviour Udo</h2>
         <h3>Manaten(M10)</h3>
         <p>
