--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Site-plan</a>
     </nav>
-    <p>Your Name Here - WDD130</p>
+    <p>Udo, Saviour Solomon- WDD130</p>
 </body>
 
 </html>
