Paragraph was corrected

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -21,14 +21,14 @@
     <h2>Overview</h2>
     <h3>Purpose</h3>
     <p>The purpose of this website is specifically about persuading visitors of the website to choose and patronize our business and services over that of our 
-        competitors in the industry. Our website will display nice pictures of the lake with customers using our products services, it shall also display our
-        stories, and the milestones we have crossed so far and shall also display awards our dear company has won so far.
+        competitors in the industry. Our website will display nice pictures of the lake with customers enjoying our products and services, it shall also display our
+        stories, and the milestones we have crossed so far also displaying awards our dear company has won so far.
           Futhermore, displaying the positve feedbacks, reviews and testimonies from our customers is very important becuase that will help in convincing
           other people to choose us confidently over our competitors.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>The targeting audience are those coming to our city for vacation and also for anyone around the world who is adventurous and are typically looking for a place to explore
+    <p>The targeting audience are those coming to our city for vacation and also for anyone around the world who is adventurous and typically looking for a place to explore
         and have fun with family or his/her love one at the same time. Their age is going to be ranging from age 10-60. They are going to belong to the middle class or the higher class sets of people
         with good income who might be living and working in top cities in the country, coming for vacation or just a visit. 
         Most of these visitors will be visiting our website with a mobile device such as mobile phones, tablets and not a desktop computer.</p>
