paragraph was updated

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,7 +20,7 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The purpose of this website is specifically about persuading visitors of the website to choose and patronize our business and services over that of our 
+    <p>The purpose of this website is specifically about persuading visitors of the website to choose and patronize our products and services over that of our 
         competitors in the industry. Our website will display nice pictures of the lake with customers enjoying our products and services, it shall also display our
         stories, and the milestones we have crossed so far also displaying awards our dear company has won so far.
           Futhermore, displaying the positve feedbacks, reviews and testimonies from our customers is very important becuase that will help in convincing
