wireframe project is now link withe to wdd300

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
         <a href="#">Personal Site-plan</a>
+        <a href="wireframepractise/wireframe.html">Working With Wireframe</a>
     </nav>
     <p>Udo, Saviour Solomon- WDD130</p>
 </body>
