--- a/wireframepractise/wireframe.html
+++ b/wireframepractise/wireframe.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo_box">
-        <img scr="https://placeimg.com/75/75/any" alt="logo">
+        <img src='https://placeimg.com/75/75/any' alt="logo">
         </div>
         <nav>
             <a href="wireframe.html">Home page</a>
@@ -20,59 +20,59 @@
         </nav>
         <div id="banner_box">
             <section class="banner">
-                <img scr="https://placeimg.com/1000/480/any" alt="Banner image">
+                <img src= 'https://placeimg.com/1000/300/any' alt="Banner image">
                 <h2>banner 1 tittle</h2>
                 <p>banner 1 text paragraph</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/1000/480/any" alt="Banner image">
+                <img src='https://placeimg.com/1000/300/any' alt="Banner image">
                 <h2>banner 2 tittle</h2>
                 <p>banner 2 text paragraph</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/1000/480/any" alt="Banner image">
+                <img src='https://placeimg.com/1000/300/any' alt="Banner image">
                 <h2>banner 3 tittle</h2>
                 <p>banner 3 text paragraph</p>
             </section>
         </div>
         <div id="product_galery">
             <section class="banner">
-                <img scr="https://placeimg.com/250/250/any" alt="product image">
+                <img src= 'https://placeimg.com/250/250/any'  alt="product image">
                 <h2>Product 1 tittle</h2>
                 <p>Product 1 description</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/250/250/any" alt="product image">
+                <img src='https://placeimg.com/250/250/any' alt="product image">
                 <h2>Product 2 tittle</h2>
                 <p>Product 2 description</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/250/250/any" alt="product image">
+                <img src='https://placeimg.com/250/250/any' alt="product image">
                 <h2>Product 3 tittle</h2>
                 <p>Product 3 description</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/250/250/any" alt="product image">
+                <img src='https://placeimg.com/250/250/any' alt="product image">
                 <h2>Product 4 tittle</h2>
                 <p>Product 4 description</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/250/250/any" alt="product image">
+                <img src='https://placeimg.com/250/250/any' alt="product image">
                 <h2>Product 5 tittle</h2>
                 <p>Product 5 description</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/250/250/any" alt="product image">
+                <img src='https://placeimg.com/250/250/any' alt="product image">
                 <h2>Product 6 tittle</h2>
                 <p>Product 6 description</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/250/250/any" alt="product image">
+                <img src='https://placeimg.com/250/250/any' alt="product image">
                 <h2>Product 7 tittle</h2>
                 <p>Product 7 description</p>
             </section>
             <section class="banner">
-                <img scr="https://placeimg.com/250/250/any" alt="product image">
+                <img src='https://placeimg.com/250/250/any' alt="product image">
                 <h2>Product 8 tittle</h2>
                 <p>Product 8 description</p>
             </section>
