--- a/wwr/business-branding/site-plan.html
+++ b/wwr/business-branding/site-plan.html
@@ -247,17 +247,19 @@
     </p>
 
     <h3>CLIENTS WITH UNIQUE NEEDS REQUIRE UNIQUE SOLUTIONS.</h3>
-    <p>Your company doesn't fit neatly into a box, and neither should your digital experiences. We start each project from
-    scratch, thoroughly understanding the needs, obstacles, possibilities, and success criteria.
-  </p>
+    <p>Your company doesn't fit neatly into a box, and neither should your digital experiences. We start each project
+      from
+      scratch, thoroughly understanding the needs, obstacles, possibilities, and success criteria.
+    </p>
 
     <h3>NO ONE KNOWS WHAT TOMORROW WILL BRING.</h3>
 
-    <p>Are you having trouble finding a custom web development firm that genuinely cares about your success? Do you want to
-    learn more about technology that can help your company? Or perhaps you're wondering what's preventing you from
-    outpacing your competitors?
-    Don't wait to take action; the future is approaching us faster than ever before. Contact us immediately to stay
-    ahead of the curve and protect your company from industry disruptions.
+    <p>Are you having trouble finding a custom web development firm that genuinely cares about your success? Do you want
+      to
+      learn more about technology that can help your company? Or perhaps you're wondering what's preventing you from
+      outpacing your competitors?
+      Don't wait to take action; the future is approaching us faster than ever before. Contact us immediately to stay
+      ahead of the curve and protect your company from industry disruptions.
     </p>
     <p>Images for the Page 3</p>
     <img src="images/img1.jpg" alt="image for page3">
