--- a/wwr/business-branding/site-plan.html
+++ b/wwr/business-branding/site-plan.html
@@ -273,24 +273,23 @@
     </h2>
     <p>
       Create three wireframes for your site. One for each page and list them here</p>
-en
-    <h3>Home</h3>
+    <h3>ABOUT</h3>
     <p>
-      [Any additional details about home that the wireframe does not make clear]
+      Exactly as the wireframe
     </p>
-    <img src="#" alt="home page wireframe">
+    <img src="images/Personal home.jpg" alt="home page wireframe">
 
-    <h3>[Page 2]</h3>
+    <h3>SERVICES</h3>
     <p>
-      [Any additional details about page 2 that the wireframe does not make clear]
+      Exactly as the wireframe
     </p>
-    <img src="#" alt="page 2 wireframe">
+    <img src="images/Personal Services.jpg" alt="page 2 wireframe">
 
-    <h3>[Page 3]</h3>
+    <h3>DEVELOPMENT</h3>
     <p>
-      [Any additional details about page 3 that the wireframe does not make clear]
+      Exactly as the wireframe
     </p>
-    <img src="#" alt="page 3 wireframe">
+    <img src="images/developement.jpg" alt="page 3 wireframe">
   </main>
 </body>
 
