few comments added

--- a/wwr/business-branding/site-plan.html
+++ b/wwr/business-branding/site-plan.html
@@ -275,19 +275,19 @@
       Create three wireframes for your site. One for each page and list them here</p>
     <h3>ABOUT</h3>
     <p>
-      Exactly as the wireframe
+      Exactly as the wireframe except font size, colors
     </p>
     <img src="images/Personal home.jpg" alt="home page wireframe">
 
     <h3>SERVICES</h3>
     <p>
-      Exactly as the wireframe
+      Exactly as the wireframe except font size, colors
     </p>
     <img src="images/Personal Services.jpg" alt="page 2 wireframe">
 
     <h3>DEVELOPMENT</h3>
     <p>
-      Exactly as the wireframe
+      Exactly as the wireframe except font size, colors
     </p>
     <img src="images/developement.jpg" alt="page 3 wireframe">
   </main>
