personal site home page was styled

--- a/wwr/business-branding/index.html
+++ b/wwr/business-branding/index.html
@@ -6,21 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M10 Branding Hub</title>
-    <limk rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles2/style.css">
 </head>
 
 <body>
     <div id="content">
         <header>
-            <a id="logo_link" href="index.html">
+            <div id="logo_link" href="index.html">
                 <img class="logo" src="images/m10hub-black.png" width="200px" height="200px" alt="M10hub logo">
 
-            </a>
+            </div>
             <nav>
-                <a href="index.html">ABOUT</a>
-                <a href="services.html">SEEVICES</a>
-                <a href="development.html"> DEVELOPMENT</a>
-                <a href="contactus.html"></a>
+                <ul class="links">
+                    <li><a href="index.html">ABOUT</a></li>
+                    <li><a href="services.html">SERVICES</a></li>
+                    <li><a href="development.html"> DEVELOPMENT</a></li>
+                </ul>
+
             </nav>
 
         </header>
@@ -28,8 +30,8 @@
             <div id="m10-box">
                 <img id="m10-img" src="images/home2.jpg" alt="An image with the word WEB on scrabble arrangement">
             </div>
+            <h1 class="about-title">WHO WE ARE AND WHAT WE DO BEST</h1>
             <section id="m10-about">
-                <h1 class="about-title">WHO WE ARE AND WHAT WE DO BEST</h1>
                 <p>M10 Branding Hub is a Nigerian-based web development agency, as a company, we are passionate about
                     finding solutions to problems through innovation, creativity, and teamwork. Within the period of
                     2021 to date, we've been offering our creative web development services from the heart of Uyo, Akwa
@@ -48,15 +50,18 @@
             </section>
         </div>
         <main class="about-grid">
-            <div id="background"></div>
             <img class="meeting" src="images/home.jpg" alt="An image of company executives in a meeting">
             <h2 class="why-m10">WHY M10HUB?</h2>
+            <div class="background"></div>
             <section class="experienced">
                 <h3>EXPERIENCED</h3>
-                <p>M10 Branding Hub is a well-known web development firm that has been in operation for over a year. We
-                    have hundreds of projects under our belt and have worked for a variety of companies and individuals
+                <p>M10 Branding Hub is a well-known web development firm that has been in operation for over a year.
+                    We
+                    have hundreds of projects under our belt and have worked for a variety of companies and
+                    individuals
                     so far. When it comes to web development and branding any project for companies and individuals
-                    successfully, experience counts, and our experiences thus far have proven our great capacity in our
+                    successfully, experience counts, and our experiences thus far have proven our great capacity in
+                    our
                     sector of specialty.
                 </p>
             </section>
@@ -64,31 +69,36 @@
                 <h3>PROVEN</h3>
                 <p>M10 Branding Hub has worked with many organizations including Dry Oar Water Rafting, TM Media
                     Mickymentor Hub, Peace Polytechnic, etc. We also love working with small organizations and
-                    individuals too. Our track records massive and extensive and we've been tested and proven in many
+                    individuals too. Our track records massive and extensive and we've been tested and proven in
+                    many
                     situations over the years.
                 </p>
             </section>
             <section class="accountable">
                 <h3>ACCOUNTABLE</h3>
-                <p>We've been around for a long time and will continue to respond to our client's needs in the future.
-                    Remote working and virtual meetings have been made possible by digital technology, but they are no
-                    substitute for face-to-face interactions. We're committed to supporting our clients, and we're based
+                <p>We've been around for a long time and will continue to respond to our client's needs in the
+                    future.
+                    Remote working and virtual meetings have been made possible by digital technology, but they are
+                    no
+                    substitute for face-to-face interactions. We're committed to supporting our clients, and we're
+                    based
                     in downtown Uyo.
                 </p>
             </section>
 
+
         </main>
         <footer>
             <h3>M10 Branding Hub &copy; 2022 - Saviour Udo.</h3>
-            <h2><a href="site-plan.html"> Site Plan</a></h2>
-            <h2><a href="services.html">Services</a></h2>
-            <div class="contactus">
-                <h2><a href="contactus.html">CONTACT US</a></h2>
-            </div>
-            <div class="address">
-                <h5>11 Afia Street Off Barrack Road <br> Uyo, Nigeria</h5>
-                <h5>+2349057888044 <br>Manatenekefre@gmail.com</h5>
-            </div>
+            <h2 class="siteplan"><a href="site-plan.html"> Site Plan</a></h2>
+            <h2 class="footer-services"><a href="services.html">Services</a></h2>
+
+            <h2 class="contactus"><a href="contactus.html">CONTACT US</a></h2>
+
+
+            <h5 class="address">11 Afia Street Off Barrack Road <br> Uyo, Nigeria</h5>
+            <h5 class="phone">+2349057888044 <br>Manatenekefre@gmail.com</h5>
+
             <div class="social">
                 <a href="https://twitter.com" target="_blank">
                     <img src="images/twitericon.png" alt="twitter icon">
@@ -97,7 +107,7 @@
                     <img src="images/insta_icon.png" alt="instagram icon">
                 </a>
                 <a href="https://wa.me/+2349057888044" target="_blank">
-                    <img src="images/whatsappicon.png" alt="whatsapp icon">
+                    <img class="whatslogo" src="images/whatsappicon.png" alt="whatsapp icon">
                 </a>
 
 
