--- a/wwr/business-branding/site-plan.html
+++ b/wwr/business-branding/site-plan.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+  <link type="text/css" rel="stylesheet" href="styles2/site-plan.css">
 </head>
 
 <body>
@@ -88,7 +88,7 @@
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Roboto]
+      Paragraph Font: [Joan]
       <!-- change this -->
     </h4>
     <h3>
