web component activity was added

--- a/index.html
+++ b/index.html
@@ -17,3 +17,11 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
         <a href="wwr/business-branding/index.html">Personal Website</a>html>
+        <a href="wwr/web-component/web_webcomponent.html">Web Component Activity</a>
+    </nav>
+
+
+</body>
+
+
+</html>
