SOME CSS FOR CHILD PAGES WERE ADDED

--- a/wwr/business-branding/development.html
+++ b/wwr/business-branding/development.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M10 Branding Hub</title>
-    <limk rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles2/development.css">
 </head>
 
 <body>
@@ -20,7 +20,6 @@
                 <a href="index.html">ABOUT</a>
                 <a href="services.html">SEEVICES</a>
                 <a href="development.html"> DEVELOPMENT</a>
-                <a href="contactus.html"></a>
             </nav>
         </header>
         <main>
@@ -63,17 +62,16 @@
 
 
         <footer>
-
             <h3>M10 Branding Hub &copy; 2022 - Saviour Udo.</h3>
-            <h2><a href="site-plan.html"> Site Plan</a></h2>
-            <h2><a href="services.html">Services</a></h2>
-            <div class="contactus">
-                <h2><a href="contactus.html">CONTACT US</a></h2>
-            </div>
-            <div class="address">
-                <h5>11 Afia Street Off Barrack Road <br> Uyo, Nigeria</h5>
-                <h5>+2349057888044 <br>Manatenekefre@gmail.com</h5>
-            </div>
+            <h2 class="siteplan"><a href="site-plan.html"> Site Plan</a></h2>
+            <h2 class="footer-services"><a href="services.html">Services</a></h2>
+
+            <h2 class="contactus"><a href="contactus.html">CONTACT US</a></h2>
+
+
+            <h5 class="address">11 Afia Street Off Barrack Road <br> Uyo, Nigeria</h5>
+            <h5 class="phone">+2349057888044 <br>Manatenekefre@gmail.com</h5>
+
             <div class="social">
                 <a href="https://twitter.com" target="_blank">
                     <img src="images/twitericon.png" alt="twitter icon">
@@ -82,8 +80,9 @@
                     <img src="images/insta_icon.png" alt="instagram icon">
                 </a>
                 <a href="https://wa.me/+2349057888044" target="_blank">
-                    <img src="images/whatsappicon.png" alt="whatsapp icon">
+                    <img class="whatslogo" src="images/whatsappicon.png" alt="whatsapp icon">
                 </a>
+
             </div>
 
 
